--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -1,12 +1,14 @@
 @charset "UTF8";
 
-/*@media screen and (min-width: 800px) and (max-width: 1099px) {
-    article {
-        max-width: 100%;
+@media screen and (max-width: 434px) {
+    footer nav ul {
+        text-align: center;
+        column-count: 2;
+        line-height: 1.5rem;
     }
-}*/
+}
 
-@media screen and (max-width: 1099px) {
+@media screen and (max-width: 999px) {
     header {
         position: static;
     }
@@ -18,7 +20,7 @@
     .nav-list {
         display: none;
         position: absolute;
-        top: 180px;
+        top: 160px;
         left: 0px;
         width: 100%;
         height: fit-content;
@@ -44,14 +46,22 @@
         display: block;
     }
 
+    .burger:hover {
+        color: white;
+    }
+
     .search-icon {
         display: block;
+    }
+
+    .search-icon:hover {
+        color: white;
     }
 
     .search {
         display: none;
         position: absolute;
-        top: 180px;
+        top: 160px;
         left: 0;
         width: 100%;
         background-color: #0F1926;
@@ -72,9 +82,11 @@
         width: 80px;
         margin-right: 10px;
     }
+}
 
-    article {
-        max-width: 100%;
+@media screen and (max-width: 1099px) { 
+   main {
+        max-width: 800px;
     }
 
     .share {
