--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -3,17 +3,17 @@
 @media screen and (max-width: 432px) {
     footer nav {
         display: flex;
+        align-items: center;
     }
 
     .logo-container {
         width: 50%;
-        margin-top: 10px;
     }
 
     footer nav > ul {
         width: 50%;
-        margin-top: 0px;
         border-left: 1px solid gray;
+        margin-top: 0px;
     }
 
     footer nav > ul > li {
